# geek-cookbook

./: 404.html  CNAME  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: release-doc.yaml
cli/zsh/: index.html
dev/docker/: index.html
dev/zsh/: index.html
docker-swarm/ceph/: index.html
docker-swarm/design/: index.html
docker-swarm/keepalived/: index.html
docker-swarm/nfs/: index.html
docker-swarm/pi/: index.html
docker-swarm/swarm-setup/: index.html
docs/: index.md
docs/cli/: zsh.md
docs/dev/: docker.md
docs/docker-swarm/: keepalived.md  nfs.md  pi.md  swarm-setup.md
search/: search_index.json
