[tool.poetry]
name = "geek-cookbook"
version = "0.1.0"
description = ""
authors = ["Idar Bergli <idarb@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
